manifests/minio/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: docker.io/minio/minio:latest
        resources: {}
        args:
        - server
        - /storage
        - --console-address
        - ":9001"
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001
        volumeMounts:
        - name: storage
          mountPath: "/storage"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: gui
      port: 9001
      targetPort: 9001
  selector:
    app: minio
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-gui-ingress
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # ingress.kubernetes.io/auth-type: "basic"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-ui.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: minio
          port: 9001

  tls:
    secretName: local-timmybtech-com-tls # or local-timmybtech-com-staging-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # ingress.kubernetes.io/auth-type: "basic"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: minio
          port: 9000

  tls:
    secretName: local-timmybtech-com-tls # or local-timmybtech-com-staging-tls
